--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
     <title>Rizki Ramadan Binyola</title>
 </head>
 <body>
-    
+    <header>
+        <h2>Calculator BMI</h2>
+    </header>
+
+    <main>
+        <!-- Artikel Utama -->
+        <article>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur repellat fugit eaque quis molestiae magni eos, laudantium aliquid exercitationem deserunt sequi animi debitis harum perferendis laborum quas ipsum voluptatem quasi!</p>
+        </article>
+
+        <!-- Form -->
+        <section>
+            <form>
+                
+            </form>
+        </section>
+
+        <!-- Form Article -->
+        <article></article>
+
+        <!-- Hasil -->
+         <article>
+            <header>
+                <h3>Hasil</h3>
+            </header>
+
+            <!-- Result Section -->
+            <section>
+
+            </section>
+
+            <!-- Result Article -->
+            <article>
+
+            </article>
+
+            <!-- General Information -->
+             <section>
+
+             </section>
+         </article>
+    </main>
 </body>
 </html>
