--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <section class="main-section">
             <!-- Artikel Utama -->
             <article>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur repellat fugit eaque quis molestiae magni eos, laudantium aliquid exercitationem deserunt sequi animi debitis harum perferendis laborum quas ipsum voluptatem quasi!</p>
+                <p>
+                    Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? <br> Yuk, hitung sekarang di kalkulator BMI.
+                </p>
             </article>
     
             <!-- Form -->
